# zeroipc

./: .gitignore  404.html  AGENTS.md  BLOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONAN_SUBMISSION.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_TREE.txt  Doxyfile  LICENSE  MKDOCS_SETUP.md  Makefile  PROJECT_STRUCTURE.md  README.md  README_8md.html  README_NEW.md  RELEASE_NOTES_v1.0.1.md  SPECIFICATION.md  VCPKG_SUBMISSION.md  annotated.html  annotated_dup.js  architecture_8md.html  basic__usage_8cpp.html  basic__usage_8cpp.js  basic__usage_8cpp__incl.map  basic__usage_8cpp__incl.md5  basic__usage_8cpp_source.html  benchmark__reads_8cpp.html  benchmark__reads_8cpp.js  benchmark__reads_8cpp__incl.map  benchmark__reads_8cpp__incl.md5  benchmark__reads_8cpp_source.html  classes.html  classposix__shm__impl-members.html  classposix__shm__impl.html  classposix__shm__impl.js  classshm__array-members.html  classshm__array.html  (+197 more)
.papermill/: outline.md  state.md
TDD_BEST_PRACTICES_LOCKFREE/: index.html
TESTING_STRATEGY/: index.html
TEST_OPTIMIZATION_ACTION_PLAN/: index.html
VFS_IMPLEMENTATION_STATUS/: index.html
VIRTUAL_FILESYSTEM_DESIGN/: index.html
advanced/: index.html
api/: index.html
api_reference/: index.html
architecture/: index.html
best-practices/: index.html
c/: API_ENHANCEMENT_REPORT.md  Makefile  README.md  test_table_debug  test_table_debug.c  test_table_stress
cli/: index.html
cli_tools/: index.html
cmake/: posix_shm-config.cmake.in  zeroipc-config.cmake.in
codata_guide/: index.html
conan_submission/: index.html
contributing/: index.html
cpp/: CMakeLists.txt  COVERAGE_REPORT.md  Makefile  README.md  TESTING_SUMMARY.md  coverage_filtered.info  test_lockfree  test_lockfree.cpp  test_stress  test_stress.cpp  zeroipcConfig.cmake.in
cpp/benchmarks/: CMakeLists.txt  Makefile  benchmark_array.cpp  benchmark_queue.cpp  benchmark_stack.cpp
cpp/include/zeroipc/: array.h  barrier.h  channel.h  event.h  future.h  latch.h  lazy.h  map.h  memory.h  monitor.h  mutex.h  once.h  pool.h  queue.h  ring.h  rwlock.h  semaphore.h  set.h  signal.h  stack.h  stream.h  table.h
cpp/include/zeroipc/detail/: hash.h  spin_wait.h
cpp/tests/: CMakeLists_improved.txt  test_aba_problem.cpp  test_array.cpp  test_barrier.cpp  test_cli_tool.cpp  test_codata.cpp  test_config.h  test_coverage_improvement.cpp  test_crash_safety.cpp  test_edge_cases.cpp  test_event.cpp  test_failure_recovery.cpp  test_latch.cpp  test_lockfree_comprehensive.cpp  test_memory.cpp  test_memory_boundaries.cpp  test_monitor.cpp  test_mutex.cpp  test_new_structures.cpp  test_once.cpp  test_queue.cpp  test_rwlock.cpp  test_semaphore.cpp  test_semaphore_optimized.cpp  test_signal.cpp  test_stack.cpp  test_stress.cpp  test_table.cpp  test_table_stress.cpp
cpp/tools/: vfs.h  zeroipc-inspect.cpp  zeroipc.cpp
data_structures/: index.html
design_philosophy/: index.html
docs/: README.md  TDD_BEST_PRACTICES_LOCKFREE.md  TESTING_STRATEGY.md  TEST_OPTIMIZATION_ACTION_PLAN.md  VFS_IMPLEMENTATION_STATUS.md  VIRTUAL_FILESYSTEM_DESIGN.md  api_reference.md  architecture.md  cli_tools.md  codata_guide.md  conan_submission.md  design_philosophy.md  doxygen-awesome.css  index.md  lock_free_patterns.md  mainpage.md  optimizations.md  patterns.md  performance.md  sync_primitives_guide.md  tutorial.md  vcpkg_submission.md
examples/: 01_hello_world.cpp  12_reactive_streams.cpp  CMakeLists.txt  basic_usage.cpp  benchmark_reads.cpp  custom_table_sizes.cpp  index.html  simd_simulation.cpp  simulation_patterns.cpp
getting-started/: index.html
go/: README.md  go.mod
include/: array.h  atomic.h  bitset.h  map.h  pool.h  posix_shm.h  queue.h  ring.h  set.h  shm_array.h  shm_atomic.h  shm_bitset.h  shm_hash_map.h  shm_object_pool.h  shm_queue.h  shm_ring_buffer.h  shm_set.h  shm_simd_utils.h  shm_span.h  shm_stack.h  shm_table.h  shm_tbl.h  simd_utils.h  span.h  stack.h  table.h  zeroipc.h
interop/: cpp_interop.cpp  cpp_reader  cpp_reader.cpp  cpp_writer  cpp_writer.cpp  python_reader.py  python_writer.py  run_simple_test.sh  simple_test.cpp  simple_test.py  test_barrier_interop.py  test_interop.sh  (+6 more)
python/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  test_bindings.py
python/benchmarks/: benchmark_all.py  benchmark_queue.py
python/examples/: basic_example.py
python/posix_shm/: __init__.py  helpers.py  numpy_utils.py
python/src/: python_bindings.cpp
python/tests/: conftest_recommended.py  test_alignment.py  test_array.py  test_atomic.py  test_barrier.py  test_basic.py  test_bitset.py  test_cffi.py  test_channel.py  test_channel_buffered_only.py  test_channel_comprehensive.py  test_channel_core.py  test_channel_fixed.py  test_crash_safety.py  test_event.py  test_failure_recovery.py  test_future.py  test_hashmap.py  test_integrity.py  test_latch.py  test_lazy.py  test_map.py  test_memory_boundaries.py  test_monitor.py  test_mutex.py  test_once.py  test_pool.py  test_queue.py  test_ring.py  test_rwlock.py  test_semaphore.py  test_set.py  test_shared_memory.py  test_signal.py  test_stack.py  test_stream.py  test_stress.py  test_sync_cross_process.py  test_sync_error_handling.py  test_table_stress.py
python/zeroipc/: __init__.py  _cffi.py  array.py  atomic.py  barrier.py  channel.py  event.py  future.py  latch.py  lazy.py  map.py  memory.py  monitor.py  mutex.py  once.py  pool.py  queue.py  ring.py  rwlock.py  semaphore.py  set.py  signal.py  stack.py  stream.py  table.py
tests/: CMakeLists.txt  shared_memory_tests.cpp  shm_test_alloc.cpp  test_array.cpp  test_bitset.cpp  test_cpp_hashmap.cpp  test_fragmentation.cpp  test_hash_map.cpp  test_hash_map_multiple.cpp  test_integration_multi_structures.cpp  test_main.cpp  test_multi_process.cpp  test_object_pool.cpp  test_posix_shm.cpp  test_queue.cpp  test_ring_buffer.cpp  test_set.cpp  test_shm_array.cpp  test_shm_bitset.cpp  test_shm_hash_map.cpp  test_shm_object_pool.cpp  test_shm_queue.cpp  test_shm_ring_buffer.cpp  test_shm_set.cpp  test_shm_stack.cpp  test_shm_table.cpp  test_stack.cpp  test_table.cpp  test_zeroipc.cpp
(+233 files in other folders)
